# vimeet-server

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs  messages.rs  server.rs
static/: websocket.html
