[package]
name = "vimeet-server"
version = "0.1.0"
authors = ["Mikel Muennekhoff <inf18207@lehre.dhbw-stuttgart.de>", "Julian Groshaupt <mail@julian-groshaupt.de>"]
edition = "2018"

[dependencies]
actix-rt = "1.0.0"
actix = "0.9.0"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
actix-files = "0.2.1"

rand = "0.6"
bytes = "0.5.3"
byteorder = "1.1"
futures = "0.3.1"
env_logger = "0.6"
serde = "1.0"
serde_json = "1.0"

dotenv = "0.15"

[dev-dependencies]
rusty-hook = "0.11"
